--- a/index.html
+++ b/index.html
@@ -4,8 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alexanny Nunez</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+   
+<h1> 
+    Hi I'm Alexanny 
+</h1>
+<p>
+Hello! my name is alexanny nunez and I am currently a STEAM student studying  Frontend Development under Mr. Forlenza. I  like taking my time while working on projects rather than rushing, but occasionally I can work quickly and do an excellent job. I love designing things to make them look very pleasing to the eye, it is just so exhilarating to see a simple design turn into something so beautiful and extraordinary 
+</p>
+
+<hr style="color: rgb(225, 175, 198);">
+
+<h1> 
+    More about me! 
+</h1>
+
+<p>
+    I'm currently 16 and I enjoy learning new skills. Ever since I was a kid I always found myself interested in learning new and fun things to do at home. I learned so many things off the internet and from my teachers that have helped me do many things in the short but meaningful life I've lived. Learning things like crocheting, painting, baking, cooking, playing the clarinet, and creating new things are all the things I loved doing as a kid, As I got older I noticed that what I like is creating fun new things, which is probably why I got into programming. You see, programming gives me so much space to bring my ideas to light and see the real thing, check out my projects link to learn more about my work
+    </p>
+    <hr style="color: rgb(225, 175, 198);">
+<h1>
+    My skills 
+</h1>
+<ul>
+<li> Reading</li>
+<li>writing skills </li>
+<li> speaks two langages (english and spanish) </li>
+<li> leadership skills</li>
+<li> Problem solving.</li>
+<li>Creativity and innovation</li>
+<li>Collaboration</li>
+<li>critical thinking and decision-making.</li>
+<li>technical skills</li>
+<li>Observation skills</li>
+<li>Knowledge of safety regulations</li>
+<li>Online safety</li>
+<li>Patience</li>
+<li>game development</li>
+<li>web design</li>
+
+</ul>
+
+
+<hr style="color: rgb(225, 175, 198);">
+
+<h1>
+    Links to my Projects 
+</h1>
+<p>
+    hi
+</p>
+
 
 </body>
 </html>
