i added a information, on how to get to links

--- a/moreabou_me.html
+++ b/moreabou_me.html
@@ -8,10 +8,26 @@
 
 </head>
 <body>
-
+    <nav class="navbar">
+        <ul>
+            <li><a href="index.html"> Home</a></li>
+                <li><a href="moreabou_me.html"> More Information</a></li>
+        </ul>
+    
+    </nav>
+    
     <h1>
         projects i have done
     </h1>
+
+
+
+
+    <p>
+        I have made a mad libs game before. It took me a week to complete and I would say It turned out very good, considering it was my first time anyways. the game was about a boy who was trying to go to sleep but simply could not, he goes downstairs to get a cup of water but his mom finds him,
+
+    </p>
+
 
 </body>
 </html>
