--- a/moreabou_me.html
+++ b/moreabou_me.html
@@ -20,13 +20,46 @@
         projects i have done
     </h1>
 
+    <hr class="text-pink">
+    <h2>
+        My Nightmare
+    </h2>
 
+     
+    <img src="Screen Shot 2025-02-11 at 1.31.34 PM.png" width="300" height="300">
+    <img src="Screen Shot 2025-02-11 at 1.31.23 PM.png" width="300" height="300">
+    <img src="Screen Shot 2025-02-11 at 1.26.25 PM.png" width="300" height="300">
 
-
-    <p>
-        I have made a mad libs game before. It took me a week to complete and I would say It turned out very good, considering it was my first time anyways. the game was about a boy who was trying to go to sleep but simply could not, he goes downstairs to get a cup of water but his mom finds him,
-
+    <p>       I have made a text to play game before. It took me a week to complete and I would say It turned out very good, considering it was my first time anyways. the game was about a boy who was trying to go to sleep but simply could not, he goes downstairs to get a cup of water but his mom finds him. up here you can find the code and the steps it took. 
     </p>
+
+    
+    <hr class="text-pink">
+    <h2>
+        My website 
+    </h2>
+ 
+    <img src="Screen Shot 2025-02-11 at 1.30.07 PM.png" width="300" height="300
+">
+<img src="Screen Shot 2025-02-12 at 12.47.35 PM.png" width="300" height="300">
+
+<p>
+This page I made was about sea plants and some more information about them, you can find information about different sea plants and more information about them, stuff like where you can normally spot them around the areas near the beach to perfect fishing spots to go to. Even learning things like the fishes that tend to eat such plants and how to cook the plants. It was my first website that i made
+</p>
+
+<hr class="text-pink">
+
+<h2>
+    My Wedding!
+</h2>
+
+<img src="Screen Shot 2025-02-12 at 1.29.45 PM.png" width="400" height="400"> 
+<img src="Screen Shot 2025-02-12 at 1.33.56 PM.png" width="400" height="400"> 
+
+<p>
+    This was a mad-libs game that I made a while back, it was the first mad-libs game I made but I think it is safe to say that all turned out well, I had a lot of fun working on this primarily when it reached the storytelling part, if I would have had more time I would work more to make the story way more engaging. The game was about you the player having your wedding, you getting married to the love of your life but your friend is not alright with this. your friend tries everything To eliminate your wedding but clearly, they were unable to succeed. 
+</p>
+
 
 
 </body>
