--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alexanny Nunez</title>
     <link rel="stylesheet" href="styles.css">
+   
 </head>
 <body>
     
@@ -24,7 +25,7 @@
     Hi I'm Alexanny 
 </h1>
 
-<img src="Screen Shot 2025-02-12 at 2.21.45 PM.png" width="300">
+<img src="ME.png" width="300">
 
 <p>
 Hello! my name is alexanny nunez and I am currently a STEAM student studying  Frontend Development under Mr. Forlenza. I  like taking my time while working on projects rather than rushing, but occasionally I can work quickly and do an excellent job. I love designing things to make them look very pleasing to the eye, it is just so exhilarating to see a simple design turn into something so beautiful and extraordinary 
