--- a/moreabou_me.html
+++ b/moreabou_me.html
@@ -26,9 +26,9 @@
     </h2>
 
      
-    <img src="Screen Shot 2025-02-11 at 1.31.34 PM.png" width="300" height="300">
+   
     <img src="Screen Shot 2025-02-11 at 1.31.23 PM.png" width="300" height="300">
-    <img src="Screen Shot 2025-02-11 at 1.26.25 PM.png" width="300" height="300">
+   <img src="Screen Shot 2025-02-11 at 1.26.25 PM (1).png" width="300" height="300">
 
     <p>       I have made a text to play game before. It took me a week to complete and I would say It turned out very good, considering it was my first time anyways. the game was about a boy who was trying to go to sleep but simply could not, he goes downstairs to get a cup of water but his mom finds him. up here you can find the code and the steps it took. 
     </p>
@@ -39,9 +39,8 @@
         My website 
     </h2>
  
-    <img src="Screen Shot 2025-02-11 at 1.30.07 PM.png" width="300" height="300
-">
-<img src="Screen Shot 2025-02-12 at 12.47.35 PM.png" width="300" height="300">
+    <img src="Screen Shot 2025-02-11 at 1.29.54 PM.png" width="300" height="300">
+<img src="fish.png"width="300" height="300">
 
 <p>
 This page I made was about sea plants and some more information about them, you can find information about different sea plants and more information about them, stuff like where you can normally spot them around the areas near the beach to perfect fishing spots to go to. Even learning things like the fishes that tend to eat such plants and how to cook the plants. It was my first website that i made
