we added a form

--- a/moreabou_me.html
+++ b/moreabou_me.html
@@ -27,8 +27,8 @@
 
      
    
-    <img src="Screen Shot 2025-02-11 at 1.31.23 PM.png" width="300" height="300">
-   <img src="Screen Shot 2025-02-11 at 1.26.25 PM (1).png" width="300" height="300">
+    <img src="death.png" height="300">
+   <img src="thelayoutofdeathgame.png" width="300" height="300">
 
     <p>       I have made a text to play game before. It took me a week to complete and I would say It turned out very good, considering it was my first time anyways. the game was about a boy who was trying to go to sleep but simply could not, he goes downstairs to get a cup of water but his mom finds him. up here you can find the code and the steps it took. 
     </p>
@@ -39,8 +39,8 @@
         My website 
     </h2>
  
-    <img src="Screen Shot 2025-02-11 at 1.29.54 PM.png" width="300" height="300">
-<img src="fish.png"width="300" height="300">
+   
+<img src="myweb.png"width="300" height="300">
 
 <p>
 This page I made was about sea plants and some more information about them, you can find information about different sea plants and more information about them, stuff like where you can normally spot them around the areas near the beach to perfect fishing spots to go to. Even learning things like the fishes that tend to eat such plants and how to cook the plants. It was my first website that i made
@@ -52,13 +52,65 @@ This page I made was about sea plants and some more information about them, you 
     My Wedding!
 </h2>
 
-<img src="Screen Shot 2025-02-12 at 1.29.45 PM.png" width="400" height="400"> 
-<img src="Screen Shot 2025-02-12 at 1.33.56 PM.png" width="400" height="400"> 
+<img src="mywed.png" width="400" height="400"> 
+<img src="wed.png" width="300" height="300">
 
 <p>
     This was a mad-libs game that I made a while back, it was the first mad-libs game I made but I think it is safe to say that all turned out well, I had a lot of fun working on this primarily when it reached the storytelling part, if I would have had more time I would work more to make the story way more engaging. The game was about you the player having your wedding, you getting married to the love of your life but your friend is not alright with this. your friend tries everything To eliminate your wedding but clearly, they were unable to succeed. 
 </p>
 
+
+<h1>contact me</h1>
+<p>Full out <strong>all the questions"</strong> on the form, this will help me reach out to you</p>
+
+<input hidden type="text" name="send-to" value="ANunez2@brooklynsteamcenter.org">
+
+
+ <form
+ action="https://form-to-email.steam-center.workers.dev/"
+ method="post"
+>
+
+
+<form action="/action_page.php" class="contacts">
+  <label for="fname">First name:</label><br>
+  <input type="text"  name="first_name"><br>
+  <br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" name="last_name"><br>
+  <br>
+  <label for="fname">@gmail:</label><br>
+  <input type="text" name="gmail"><br>
+  <br>
+   <label for="fname">phone number:</label><br>
+   <input type="tel" name="number"><br>
+   <br>
+   <label for="fnam">age</label><br>
+   <input type="number" name="age"><br>
+   <br>
+   <label for="fname">pronouns:</label><br>
+  <input type="text"  name="pronouns"><br>
+  <br>
+   <label>reason for contacting me?</label>
+ <br>
+ <textarea name="reason" required></textarea>
+ 
+ <p>What is your perferred way to contact you </p>
+<form action="/action_page.php">
+  <input type="radio" name="how_to_contact" value="email">
+ <label>Email</label> <br>
+ <input type="radio" name="how_to_contact" value="phone">
+ <label>phone<?label> <br>
+ <br>
+ <label>other</label>
+ <br>
+ <textarea name="other" required></textarea>
+ <br>
+ <input type="submit">
+ <input type="reset">
+  
+
+<p>Note that if you are not honest with me this makes reaching out harder. it would be best to contact me during weekdays if possible </p>
 
 
 </body>
