--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <ul>
             <li><a href="index.html"> Home</a></li>
                 <li><a href="moreabou_me.html"> More Information</a></li>
+                <li><a href="Contact.html"> Contact me!</a></li>    
         </ul>
     
     </nav>
@@ -86,7 +87,7 @@ Hello! my name is alexanny nunez and I am currently a STEAM student studying  Fr
 </p>
 
 
-<img src="_.gif" width="700" height="100">
+<img src="_.gif" width="1300" height="100">
 
 </body>
 </html>
