--- a/moreabou_me.html
+++ b/moreabou_me.html
@@ -12,6 +12,7 @@
         <ul>
             <li><a href="index.html"> Home</a></li>
                 <li><a href="moreabou_me.html"> More Information</a></li>
+                <li><a href="Contact.html"> Contact me!</a></li>    
         </ul>
     
     </nav>
@@ -58,59 +59,6 @@ This page I made was about sea plants and some more information about them, you 
 <p>
     This was a mad-libs game that I made a while back, it was the first mad-libs game I made but I think it is safe to say that all turned out well, I had a lot of fun working on this primarily when it reached the storytelling part, if I would have had more time I would work more to make the story way more engaging. The game was about you the player having your wedding, you getting married to the love of your life but your friend is not alright with this. your friend tries everything To eliminate your wedding but clearly, they were unable to succeed. 
 </p>
-
-
-<h1>contact me</h1>
-<p>Full out <strong>all the questions"</strong> on the form, this will help me reach out to you</p>
-
-<input hidden type="text" name="send-to" value="ANunez2@brooklynsteamcenter.org">
-
-
- <form
- action="https://form-to-email.steam-center.workers.dev/"
- method="post"
->
-
-
-<form action="/action_page.php" class="contacts">
-  <label for="fname">First name:</label><br>
-  <input type="text"  name="first_name"><br>
-  <br>
-  <label for="lname">Last name:</label><br>
-  <input type="text" name="last_name"><br>
-  <br>
-  <label for="fname">@gmail:</label><br>
-  <input type="text" name="gmail"><br>
-  <br>
-   <label for="fname">phone number:</label><br>
-   <input type="tel" name="number"><br>
-   <br>
-   <label for="fnam">age</label><br>
-   <input type="number" name="age"><br>
-   <br>
-   <label for="fname">pronouns:</label><br>
-  <input type="text"  name="pronouns"><br>
-  <br>
-   <label>reason for contacting me?</label>
- <br>
- <textarea name="reason" required></textarea>
- 
- <p>What is your perferred way to contact you </p>
-<form action="/action_page.php">
-  <input type="radio" name="how_to_contact" value="email">
- <label>Email</label> <br>
- <input type="radio" name="how_to_contact" value="phone">
- <label>phone<?label> <br>
- <br>
- <label>other</label>
- <br>
- <textarea name="other" required></textarea>
- <br>
- <input type="submit">
- <input type="reset">
-  
-
-<p>Note that if you are not honest with me this makes reaching out harder. it would be best to contact me during weekdays if possible </p>
 
 
 </body>
