--- a/Contact.html
+++ b/Contact.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>more about me</title>
+    <title>Contact Alexanny</title>
     <link rel="stylesheet" href="styles.css">
 
+<meta name="keywords" content="contact, Alexanny, student, bio, form, website, personal website, website builder, website designing, design, pink, coding, projects, me, girl, myweb, ">
+<meta name="description" content="Alexannys personal website contact page, you can use this page to contact me if your intrested in working on a project with me or even getting to talk about other things. contact me by email, number, or any of the other options I have down.">
+<link rel="shortcut icon" href="logo.png" type="image/x-icon">
 </head>
 <body>
-
+  
 
     <nav class="navbar">
         <ul>
@@ -16,12 +19,15 @@
                 <li><a href="moreabou_me.html"> More Information</a></li>
                 <li><a href="Contact.html"> Contact me!</a></li>
         </ul>
-    
+        <img src="logo.png" alt="Logo" 
+        style="float: right 300px;;width:100px;height:100px;">
     </nav>
 
 
 
-
+<h1>
+  &#9734; Contact me!  &#9734;
+</h1>
 
 
 
@@ -70,8 +76,10 @@
 <p>Note that if you are not honest with me this makes reaching out harder. it would be best to contact me during weekdays if possible </p>
 <br>
 <h2>
-  My contacts
+  &#127799; My contacts &#127799;
 </h2>
+<img src="sailor moon.gif" width="300" height="
+">
 <br>
 <P class="pink">
   <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox">
