--- a/Contact.html
+++ b/Contact.html
@@ -19,8 +19,7 @@
                 <li><a href="moreabou_me.html"> More Information</a></li>
                 <li><a href="Contact.html"> Contact me!</a></li>
         </ul>
-        <img src="logo.png" alt="Logo" 
-        style="float: right 300px;;width:100px;height:100px;">
+        <img src="logo.png" width="90" >
     </nav>
 
 
@@ -99,6 +98,8 @@
   <i data-lucide="instagram"></i>  battwo.jelly
 </a>
 </p>
+
+
 <script src="https://unpkg.com/lucide@latest"></script>
 </a>
 <p class="pink">
