--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale">
     <link rel="stylesheet" href="styles.css">
 
     <meta name="keywords" content="contact, Alexanny, student, bio, form, website, personal website, website builder, website designing, design, pink, coding, projects, me, girl, myweb, ">
@@ -37,15 +36,14 @@
                 <li><a href="moreabou_me.html"> More Information</a></li>
                 <li><a href="Contact.html"> Contact me!</a></li>    
         </ul>
-        <img src="logo.png" alt="Logo" 
-   style="float: right 300px;;width: 100px;;height: 100px;;">
+        <img src="logo.png" width="90" >
     </nav>
 
 <h1 id="heading"> 
     &#9734; Hi I'm Alexanny  &#9734;
 </h1>
 
-<img src="ME.png" class="no_img" alt="">
+<img src="ME.png" class="no_img">
 
 <p>
 Hello! my name is alexanny nunez and I am currently a STEAM student studying  Frontend Development under Mr. Forlenza. I  like taking my time while working on projects rather than rushing, but occasionally I can work quickly and do an excellent job. I love designing things to make them look very pleasing to the eye, it is just so exhilarating to see a simple design turn into something so beautiful and extraordinary 
@@ -103,8 +101,7 @@ Hello! my name is alexanny nunez and I am currently a STEAM student studying  Fr
 </p>
 
 
-<img src="cute.gif" width="1300" height="
-">
+<img src="cute.gif" width="300" class="center">
 
 </body>
 </html>
