--- a/moreabou_me.html
+++ b/moreabou_me.html
@@ -11,21 +11,20 @@
 <meta name="description" content="Alexannys personal website more about me page,where you can see all my projects and all the work I have done so far in STEAM. if you find yourself impressed do click contact me! to talk! ">
 <link rel="shortcut icon" href="logo.png" type="image/x-icon">
 </head>
-<body>
+<body >
     <nav class="navbar">
         <ul>
             <li><a href="index.html"> Home</a></li>
                 <li><a href="moreabou_me.html"> More Information</a></li>
                 <li><a href="Contact.html"> Contact me!</a></li>    
         </ul>
-        <img src="logo.png" alt="Logo" 
-        style="float: right 300px;;width:100px;height:100px;">
+        <img src="logo.png" width="90" >
     </nav>
     
     <h1>
-        &#9829  projects i have done  &#9829
+        &#9829  projects i have done  &#9829 
     </h1>
-    <img src="Pink aesthetic background.gif" width="500" height="150"  class="center">
+    <img src="Pink aesthetic background.gif"  height="150" class="center" class=".no_img">
 
     <hr class="text-pink">
     <h2>
@@ -34,8 +33,8 @@
 
      
    
-    <img src="death.png" height="300">
-   <img src="thelayoutofdeathgame.png" width="300" height="300">
+    <img src="death.png" height="170" class=".no_img">
+   <img src="thelayoutofdeathgame.png" height="200" class=".no_img">
 
     <p>       I have made a text to play game before. It took me a week to complete and I would say It turned out very good, considering it was my first time anyways. the game was about a boy who was trying to go to sleep but simply could not, he goes downstairs to get a cup of water but his mom finds him. up here you can find the code and the steps it took. 
     </p>
@@ -59,8 +58,8 @@ This page I made was about sea plants and some more information about them, you 
     &#9674; My Wedding! &#9674;
 </h2>
 
-<img src="mywed.png" width="400" height="400"> 
-<img src="wed.png" width="300" height="300">
+<img src="mywed.png" width="300" height="200"> 
+<img src="wed.png" width="300" height="200">
 
 <p>
     This was a mad-libs game that I made a while back, it was the first mad-libs game I made but I think it is safe to say that all turned out well, I had a lot of fun working on this primarily when it reached the storytelling part, if I would have had more time I would work more to make the story way more engaging. The game was about you the player having your wedding, you getting married to the love of your life but your friend is not alright with this. your friend tries everything To eliminate your wedding but clearly, they were unable to succeed. 
