--- a/Contact.html
+++ b/Contact.html
@@ -25,7 +25,7 @@
                 <li><a href="moreabou_me.html"> More Information</a></li>
                 <li><a href="Contact.html"> Contact me!</a></li>
         </ul>
-        <img src="logo.png" width="90" >
+        <img src="ME.png" width="90" >
     </nav>
 
 
