--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
                 <li><a href="moreabou_me.html"> More Information</a></li>
                 <li><a href="Contact.html"> Contact me!</a></li>    
         </ul>
-        <img src="logo.png" width="90" >
+        <img src="ME.png" width="90" >
     </nav>
 
 <h1 id="heading"> 
     &#9734; Hi I'm Alexanny  &#9734;
 </h1>
 
-<img src="ME.png" class="no_img">
+<img src=".png" class="no_img">
 
 <p>
 Hello! my name is alexanny nunez and I am currently a STEAM student studying  Frontend Development under Mr. Forlenza. I  like taking my time while working on projects rather than rushing, but occasionally I can work quickly and do an excellent job. I love designing things to make them look very pleasing to the eye, it is just so exhilarating to see a simple design turn into something so beautiful and extraordinary 
@@ -62,7 +62,7 @@ Hello! my name is alexanny nunez and I am currently a STEAM student studying  Fr
 </h1>
 
 <p>
-    I'm currently 16 and I enjoy learning new skills. Ever since I was a kid I always found myself interested in learning new and fun things to do at home. I learned so many things off the internet and from my teachers that have helped me do many things in the short but meaningful life I've lived. Learning things like crocheting, painting, baking, cooking, playing the clarinet, and creating new things are all the things I loved doing as a kid, As I got older I noticed that what I like is creating fun new things, which is probably why I got into programming. You see, programming gives me so much space to bring my ideas to light and see the real thing, check out my projects link to learn more about my work
+    I'm currently 16 and I . Ever since I was a kid I always found myself interested in learning new and fun things to do at home. I learned so many things off the internet and from my teachers that have helped me do many things in the short but meaningful life I've lived. Learning things like crocheting, painting, baking, cooking, playing the clarinet, and creating new things are all the things I loved doing as a kid, As I got older I noticed that what I like is creating fun new things, which is probably why I got into programming. You see, programming gives me so much space to bring my ideas to light and see the real thing, check out my projects link to learn more about my work
     </p>
     <hr class="text-pink">
 <h1>
@@ -83,11 +83,11 @@ Hello! my name is alexanny nunez and I am currently a STEAM student studying  Fr
 <li>Online safety</li>
 <li>Patience</li>
 <li>game development</li>
+<li>HTML/CSS Certification </li>
 <li>web design</li>
-
 </ul>
 
-
+<hr>
 
 
 <h1>
