--- a/moreabou_me.html
+++ b/moreabou_me.html
@@ -24,7 +24,7 @@
                 <li><a href="moreabou_me.html"> More Information</a></li>
                 <li><a href="Contact.html"> Contact me!</a></li>    
         </ul>
-        <img src="logo.png" width="90" >
+        <img src="ME.png" width="90" >
     </nav>
     
     <h1 >
@@ -39,9 +39,8 @@
 
      
    
-    <img src="death.png" height="170" class=".no_img">
-   <img src="thelayoutofdeathgame.png" height="200" class=".no_img">
-
+    <img src="Night.png" height="170" class=".no_img">
+  
     <p>       I have made a text to play game before. It took me a week to complete and I would say It turned out very good, considering it was my first time anyways. the game was about a boy who was trying to go to sleep but simply could not, he goes downstairs to get a cup of water but his mom finds him. up here you can find the code and the steps it took. 
     </p>
 
@@ -70,6 +69,9 @@ This page I made was about sea plants and some more information about them, you 
 <p>
     This was a mad-libs game that I made a while back, it was the first mad-libs game I made but I think it is safe to say that all turned out well, I had a lot of fun working on this primarily when it reached the storytelling part, if I would have had more time I would work more to make the story way more engaging. The game was about you the player having your wedding, you getting married to the love of your life but your friend is not alright with this. your friend tries everything To eliminate your wedding but clearly, they were unable to succeed. 
 </p>
+
+<hr class="text-pink">
+
 
 </body>
 </html>
