--- a/moreabou_me.html
+++ b/moreabou_me.html
@@ -73,5 +73,34 @@ This page I made was about sea plants and some more information about them, you 
 <hr class="text-pink">
 
 
+
+<h2>
+    &#9674;Eco Bloom ! &#9674;
+</h2>
+
+<img src="openme.png" width="300" height="200"> 
+
+<p>
+    Eco bloom was a collaborative project me and my teammates made together! Eco bloom is a business that aims to reduce plastic waste by upcycling plastic materials or any waste, and turning them into accessorized jewelry to wear or even as household objects t just have around the house. Eco Bloom’s mission is to reduce plastic waste in New York by 25% within our first year of business, starting with these underserved areas. Through upcycling locally collected trash, we aim to turn waste into opportunity — creating jobs, cleaner streets, and a model for sustainable change rooted in environmental justice.      
+
+</p>
+
+<hr class="text-pink">
+
+
+
+<h2>
+    &#9674;clicker game ! &#9674;
+</h2>
+
+<img src="lol.png" width="300" height="200"> 
+
+<p>
+    This is my first ever clicker game that I made! It's a fun game I made with some classical games you would typically see at a casino. If you're ever feeling bored you can always hop on the ride and click your mind away from the real world. Plus it's much safer than going to an actual casino and spending your money!  
+
+
+</p>
+
+
 </body>
 </html>
