--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     &#9734; Hi I'm Alexanny  &#9734;
 </h1>
 
-<img src=".png" class="no_img">
+<img src="Reb.jpeg" class="no_img">
 
 <p>
 Hello! my name is alexanny nunez and I am currently a STEAM student studying  Frontend Development under Mr. Forlenza. I  like taking my time while working on projects rather than rushing, but occasionally I can work quickly and do an excellent job. I love designing things to make them look very pleasing to the eye, it is just so exhilarating to see a simple design turn into something so beautiful and extraordinary 
