--- a/Contact.html
+++ b/Contact.html
@@ -84,8 +84,7 @@
 <h2>
   &#127799; My contacts &#127799;
 </h2>
-<img src="sailor moon.gif" width="300" height="
-">
+
 <br>
 <P class="pink">
   <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox">
@@ -114,6 +113,9 @@
     <i data-lucide="file"></i> my past work
     </a>
 </p>
+
+<img src="happy.gif" width="200" height="
+" class="center">
   <script>
     lucide.createIcons();
   </script>
