--- a/moreabou_me.html
+++ b/moreabou_me.html
@@ -63,7 +63,7 @@ This page I made was about sea plants and some more information about them, you 
     &#9674; My Wedding! &#9674;
 </h2>
 
-<img src="mywed.png" width="300" height="200"> 
+<img src="My wedding.png" width="300" height="200"> 
 <img src="wed.png" width="300" height="200">
 
 <p>
