--- a/index.html
+++ b/index.html
@@ -52,7 +52,16 @@
 <img src="Reb.jpeg" class="no_img">
 
 <p>
-Hello! my name is alexanny nunez and I am currently a STEAM student studying  Frontend Development under Mr. Forlenza. I  like taking my time while working on projects rather than rushing, but occasionally I can work quickly and do an excellent job. I love designing things to make them look very pleasing to the eye, it is just so exhilarating to see a simple design turn into something so beautiful and extraordinary 
+Hey, My name is Alexanny Nunez! I’m a senior at Brooklyn STEAM Center, and I’m all about full-stack development right now. I’ve learned a bunch of languages like JavaScript, Python, and HTML/CSS, and I’m getting into Tailwind CSS too.
+
+
+One of the projects I’m proud of is Eco Bloom, a business website I worked on with my team. I did most of the design work, including the landing page and the survey page. Honestly, the survey page wasn’t my favorite thing to work on, but it was a great challenge and felt good to finish. I’m not always in love with every part of web development, but it’s cool to see how much I’ve learned along the way.
+
+
+Outside of coding, I keep myself busy with a ton of stuff. I play softball, I’m in student government, and I’m part of honor society. I also swim, write for the newspaper club, and get involved in debate club and green team. Staying busy with different activities helps me stay grounded and gives me a chance to do things I enjoy outside of tech.
+
+
+I’m mainly focusing on full-stack development right now, but I’m not against taking on some web design work if it feels right. I’m just taking it one step at a time and seeing where things go.
 </p>
 
 <hr class="text-pink">
@@ -62,7 +71,16 @@ Hello! my name is alexanny nunez and I am currently a STEAM student studying  Fr
 </h1>
 
 <p>
-    I'm currently 16 and I . Ever since I was a kid I always found myself interested in learning new and fun things to do at home. I learned so many things off the internet and from my teachers that have helped me do many things in the short but meaningful life I've lived. Learning things like crocheting, painting, baking, cooking, playing the clarinet, and creating new things are all the things I loved doing as a kid, As I got older I noticed that what I like is creating fun new things, which is probably why I got into programming. You see, programming gives me so much space to bring my ideas to light and see the real thing, check out my projects link to learn more about my work
+I’m 16 and I’ve always been the kind of person who loves learning new things, whether it’s at home, at school, or online. Growing up, I was into all kinds of stuff like crocheting, painting, baking, cooking, and even playing the clarinet. It’s those moments of trying something new that really stuck with me and shaped who I am today.
+
+
+As I got older, I realized that I love creating things. That’s probably why I got into programming, it gives me the chance to turn ideas into something real. There’s something super satisfying about taking a thought, putting it into code, and seeing it come to life. It’s like building something from scratch, just like I used to do with all those other hobbies.
+
+
+Outside of programming, I’m still all about staying active and exploring new interests. Whether it’s playing softball, writing for the newspaper, or helping out with the green team, I try to stay involved and push myself to learn and grow.
+
+
+If you’re interested, check out my projects to see some of the stuff I’ve built and created. It’s been a fun ride so far, and I’m excited to see where this journey takes me!
     </p>
     <hr class="text-pink">
 <h1>
@@ -85,6 +103,13 @@ Hello! my name is alexanny nunez and I am currently a STEAM student studying  Fr
 <li>game development</li>
 <li>HTML/CSS Certification </li>
 <li>web design</li>
+<li>Public Speaking</li>
+<li>Adaptability</li>
+<li>Time Management</li>
+<li>Communication Skills</li>
+<li>Teamwork</li>
+<li>Python</li>
+<li>Tailwind CSS</li>
 </ul>
 
 <hr>
@@ -107,7 +132,6 @@ Hello! my name is alexanny nunez and I am currently a STEAM student studying  Fr
 </p>
 
 
-<img src="cute.gif" width="300" class="center">
 
 </body>
 </html>
