--- a/Contact.html
+++ b/Contact.html
@@ -108,8 +108,8 @@
 <script src="https://unpkg.com/lucide@latest"></script>
 </a>
 <p class="pink">
-  <a href="https://drive.google.com/drive/folders/1kw_jvkv2yofWd0PUGL57kCLsof6rJum_?usp=drive_link">
-    <i data-lucide="file"></i> my past work
+  <a href="https://www.linkedin.com/in/alexanny-nunez-5aab0b353/">
+    <i data-lucide="file"></i> Linkedin
     </a>
 </p>
 
